--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,13 +59,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Studying"
-                    android:id="@+id/titlemisiontext"
+                android:id="@+id/titlemisiontext"
                     android:textSize="50dp"
                     android:textIsSelectable="true"
                 android:layout_marginTop="58dp"
                 android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true" />
+                android:layout_centerHorizontal="true"
+                android:text="Studying" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -109,10 +109,50 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_alignParentStart="true"
             android:layout_height="220dp"
-            android:layout_alignParentBottom="true">
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true">
 
+            <TextView
+                android:text="Duration : "
+                android:textSize="18dp"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView2"
+                android:layout_below="@+id/Text"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:text="..............."
+                android:textSize="18dp"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/nextduration"
+                android:layout_alignBaseline="@+id/textView2"
+                android:layout_alignBottom="@+id/textView2"
+                android:layout_alignStart="@+id/nextonemission" />
+
+            <TextView
+                android:text="............."
+                android:textSize="18dp"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/nextonemission"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="55dp" />
+
+            <TextView
+                android:text="Next Mission : "
+                android:textSize="18dp"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/Text"
+
+                android:layout_alignBaseline="@+id/nextonemission"
+                android:layout_alignBottom="@+id/nextonemission"
+                android:layout_alignParentStart="true"
+                android:layout_toStartOf="@+id/nextduration" />
         </RelativeLayout>
 
     </RelativeLayout>
