--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,10 +62,12 @@
                 android:id="@+id/titlemisiontext"
                     android:textSize="50dp"
                     android:textIsSelectable="true"
-                android:layout_marginTop="58dp"
+                android:layout_marginTop="56dp"
+                android:text="Default"
                 android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:text="Default" />
+                android:layout_alignParentStart="true"
+                android:gravity="center"
+                android:layout_alignParentEnd="true" />
         </RelativeLayout>
 
         <RelativeLayout
